Add proper _hyperlinks_

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <!-- Phone -->
                   <span style="font-family: inherit; color: #5E81AC;">m &sdot; </span>
                   <a style="font-family: inherit; text-decoration: none; color: #666666;" 
-                     href="tel:+8801719286264"
+                     href="tel:REPLACE"
                   >
                     +421 XXX XXX XXX
                   </a>
@@ -82,7 +82,7 @@
                   <!-- Email -->
                   <span style="font-family: inherit; color: #5E81AC;">e &sdot; </span>
                   <a style="font-family: inherit; text-decoration: none; color: #666666;" 
-                     href="mailto:skarif2@gmail.com"
+                     href="mailto:michal.spano03@gmail.com"
                   > 
                   michal.spano03@gmail.com
                   </a>
